# AICodeGen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
src/aicodegen/: __init__.py  cli.py
src/aicodegen/agents/: __init__.py  agent_memory.py  base_agent.py  discovery_agent.py
src/aicodegen/core/: config.py  generator.py
src/aicodegen/database/: __init__.py  connection.py  models.py  utils.py
src/aicodegen/database/migrations/: alembic.ini  env.py
src/aicodegen/database/migrations/versions/: .gitkeep
src/aicodegen/models/: base.py  openai_model.py
src/aicodegen/templates/javascript/: class.js
src/aicodegen/templates/python/: class.py  module.py
src/aicodegen/utils/: __init__.py  code_analyzer.py  file_handler.py
tests/: test_config.py  test_generator.py  test_utils.py
