[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodegen"
version = "0.1.0"
description = "AI-Powered Software Engineering and Code Generation Platform"
authors = [{name = "AICodeGen Team", email = "team@aicodegen.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Existing AI and code generation dependencies
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    
    # Multi-agent platform dependencies
    "fastapi>=0.104.0",
    "celery>=5.3.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
    "websockets>=11.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "langchain>=0.0.350",
    "uvicorn>=0.24.0",
    
    # Additional dependencies for multi-agent functionality
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-socketio>=5.9.0",
    "aiofiles>=23.2.1",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ksjpswaroop/AICodeGen"
Repository = "https://github.com/ksjpswaroop/AICodeGen"
Issues = "https://github.com/ksjpswaroop/AICodeGen/issues"

[project.scripts]
aicodegen = "aicodegen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=aicodegen --cov-report=term-missing"
